Guardado 2 de diciembre B

--- a/folder/creacion.html
+++ b/folder/creacion.html
@@ -4,22 +4,26 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../styles.css">
     <title>Creacion</title>
 </head>
 <body>
     <header>
-        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTGTtGjQ4MeZZpaC8mUJutyr0kK-j27Puf9Aw&usqp=CAU" alt="Icono">
-        <ul>
-            <li><a href="../index.html">Inicio</a></li>
-            <li><a href="../folder/creacion.html">Creacion</a></li>
-            <li>C</li>
-            <li>D</li>
-            <li>E</li>
-        </ul>
+        <img src="https://cdn-icons-png.flaticon.com/512/2575/2575799.png" alt="Foto Icono">
+        <nav>
+            <ul>
+                <li><a href="index.html">Inicio</a></li>
+                <li><a href="folder/creacion.html">Creacion</a></li>
+                <li><a href="">Coleccion</a></li>
+                <li><a href="">Tienda</a></li>
+                <li><a href="">Contacto</a></li>
+            </ul>
+        </nav>
     </header>
     <main>
-        <h1>Creacion</h1>
-        <p>Utiliza esta seccion para darle uso a tu imaginacion. Crea combinaciones de atributos unicas, para darle un mayor valor a tu creacion.</p>
+        <div>        
+            <h1>Creacion</h1>
+            <p>Utiliza esta seccion para darle uso a tu imaginacion. Crea combinaciones de atributos unicas, para darle un mayor valor a tu creacion.</p></div>
         <article>
             <div>
                 <h2>Creacion de Personajes</h2>
@@ -45,7 +49,7 @@
                     <input type="text" id="ocupacion" name="ocupacion">
                 </div>
                 <div>
-                    <input type="button" id="terminarPersonaje">Terminar presonaje
+                    <input type="button" id="terminarPersonaje" class="otroInput">Terminar presonaje
                 </div>
             </form>
         </article>
@@ -74,7 +78,7 @@
                     <input type="text" id="uso" name="uso">
                 </div>
                 <div>
-                    <input type="button" id="terminarItem">
+                    <input type="button" id="terminarItem" class="otroInput">Terminar Item
                 </div>
             </form>
         </article>
