--- a/index.html
+++ b/index.html
@@ -4,20 +4,26 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
     <title>Inicio</title>
 </head>
 <body>
     <header>
-        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTGTtGjQ4MeZZpaC8mUJutyr0kK-j27Puf9Aw&usqp=CAU" alt="Icono">
-        <ul>
-            <li><a href="../index.html">Inicio</a></li>
-            <li><a href="../folder/creacion.html">Creacion</a></li>
-            <li>C</li>
-            <li>D</li>
-            <li>E</li>
-        </ul>
+        <header>
+            <img src="https://cdn-icons-png.flaticon.com/512/2575/2575799.png" alt="Foto Icono">        <nav>
+            <ul>
+                <li><a href="index.html">Inicio</a></li>
+                <li><a href="folder/creacion.html">Creacion</a></li>
+                <li><a href="">Coleccion</a></li>
+                <li><a href="">Tienda</a></li>
+                <li><a href="">Contacto</a></li>
+            </ul>
+        </nav>
     </header>
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-    <script src="tuki.js"></script>
+    <main>
+        <h1>Tienda virtual</h1>
+        <h4>La coleccion de articulos en la nube a nivel mundial</h4>
+    </main>  
+    <script src="tuki2.js"></script>
 </body>
 </html>
