Guardado 1 jueves 9 de Diciembre

--- a/index.html
+++ b/index.html
@@ -9,21 +9,24 @@
 </head>
 <body>
     <header>
-        <header>
-            <img src="https://cdn-icons-png.flaticon.com/512/2575/2575799.png" alt="Foto Icono">        <nav>
+        <img src="https://cdn-icons-png.flaticon.com/512/2575/2575799.png" alt="Foto Icono"> 
+        <nav>
             <ul>
                 <li><a href="index.html">Inicio</a></li>
                 <li><a href="folder/creacion.html">Creacion</a></li>
-                <li><a href="">Coleccion</a></li>
+                <li><a href="folder/coleccion.html">Coleccion</a></li>
                 <li><a href="">Tienda</a></li>
                 <li><a href="">Contacto</a></li>
             </ul>
         </nav>
     </header>
     <main>
-        <h1>Tienda virtual</h1>
-        <h4>La coleccion de articulos en la nube a nivel mundial</h4>
+        <div>
+            <h1>Tienda virtual</h1>
+            <h4>La coleccion de articulos en la nube a nivel mundial</h4>
+        </div>
     </main>  
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="tuki2.js"></script>
 </body>
 </html>
