--- a/folder/creacion.html
+++ b/folder/creacion.html
@@ -12,9 +12,9 @@
         <img src="https://cdn-icons-png.flaticon.com/512/2575/2575799.png" alt="Foto Icono">
         <nav>
             <ul>
-                <li><a href="index.html">Inicio</a></li>
-                <li><a href="folder/creacion.html">Creacion</a></li>
-                <li><a href="">Coleccion</a></li>
+                <li><a href="../index.html">Inicio</a></li>
+                <li><a href="../folder/creacion.html">Creacion</a></li>
+                <li><a href="../folder/coleccion.html">Coleccion</a></li>
                 <li><a href="">Tienda</a></li>
                 <li><a href="">Contacto</a></li>
             </ul>
