--- a/index.html
+++ b/index.html
@@ -10,9 +10,12 @@
 <body>
     <header>
         <img src="https://cdn-icons-png.flaticon.com/512/2575/2575799.png" alt="Foto Icono"> 
-        <nav>
+        <div>
+            <input type="button" name="intento1" id="intento1">
+        </div>
+        <nav class="navigator">
             <ul>
-                <li><a href="index.html">Inicio</a></li>
+                <li><a href="../index.html">Inicio</a></li>
                 <li><a href="folder/creacion.html">Creacion</a></li>
                 <li><a href="folder/coleccion.html">Coleccion</a></li>
                 <li><a href="">Tienda</a></li>
