Guardado 1 16 de Diciembre

--- a/folder/creacion.html
+++ b/folder/creacion.html
@@ -52,6 +52,10 @@
                     <input type="text" id="ocupacion" name="ocupacion">
                 </div>
                 <div>
+                    <label for="costo">Precio por la creacion</label>
+                    <input type="number" name="costo" id="costo">
+                </div>
+                <div>
                     <input type="button" id="terminarPersonaje" class="otroInput">Terminar presonaje
                 </div>
             </form>
@@ -74,11 +78,20 @@
                         <option value="Japon">Japón</option>
                         <option value="Alemania">Alemania</option>
                         <option value="Reino Unido">Reino Unido</option>
+                        <option value="España">España</option>
+                        <option value="Sudafrica">Sudafrica</option>
+                        <option value="Estados Unidos">Estados Unidos</option>
+                        <option value="Francia">Francia</option>
+                        <option value="Italia">Italia</option>
                     </select>
                 </div>
                 <div>
                     <label for="uso">Uso principal</label>
                     <input type="text" id="uso" name="uso">
+                </div>
+                <div>
+                    <label for="costo2">Precio por la creacion</label>
+                    <input type="number" name="costo2" id="costo2">
                 </div>
                 <div>
                     <input type="button" id="terminarItem" class="otroInput">Terminar Item
