--- a/index.html
+++ b/index.html
@@ -28,7 +28,58 @@
             <h1>Tienda virtual</h1>
             <h4>La coleccion de articulos en la nube a nivel mundial</h4>
         </div>
+        <article>
+            <div>
+                <p>Accede a nuestra seccion para crear tus objetos. Los objetos son todos unicos, y puedes moldear desde su origen hasta su propio precio. Pero recuerda, no hagas plagio de objetos.</p>
+                <button>
+                    <a href="folder/creacion.html">Creacion</a>
+                </button>
+            </div>
+            <div>
+                <img src="" alt="">
+            </div>
+        </article>
+        <article>
+            <div>
+                <p>En la pagina de Coleccion puedes ver todos tus objetos, tanto creados como adquiridos en la Tienda. Si la encuentras vacia, procede a crear tus objetos.</p>
+                <button>
+                    <a href="folder/coleccion.html">Coleccion</a>
+                </button>
+            </div>
+            <div>
+                <img src="" alt="">
+            </div>
+        </article>
+        <article>
+            <div>
+                <p>La tienda accede a APIs de objetos como los que creas, para que los adquieras y agregues a tu coleccion. Quien sabe, quiza suba su valor.</p>
+                <a href=""></a>
+            </div>
+            <div>
+                <img src="" alt="">
+            </div>
+        </article>
+        <article>
+            <div>
+                <p>Contactanos en esta seccion, donde accederas a nuestras redes sociales, correos electroicos, y atencion al cliente. Considera esta parte como una manera de conocernos.</p>
+                <a href=""></a>
+            </div>
+            <div>
+                <img src="" alt="">
+            </div>
+        </article>
     </main>  
+    <footer>
+        <div>
+            <p>Nombre pagina</p>
+        </div>
+        <div>
+            <p>Redes</p>
+        </div>
+        <div>
+            <p>Ubicacion</p>
+        </div>
+    </footer>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="tuki2.js"></script>
 </body>
