--- a/folder/creacion.html
+++ b/folder/creacion.html
@@ -38,6 +38,9 @@
                     <input type="text" id="nombre" name="nombre">
                 </div>
                 <div>
+                    <input type="file" name="archivo" id="archivo" required>
+                </div>
+                <div>
                     <label for="origen">Lugar de origen</label>
                     <select name="origen" id="origen">
                         <option value="Buenos Aires">Buenos Aires</option>
@@ -69,6 +72,9 @@
                 <div>
                     <label for="nombre2">Nombre del Item</label>
                     <input type="text" id="nombre2" name="nombre2">
+                </div>
+                <div>
+                    <input type="file" name="archivo2" id="archivo2" required>
                 </div>
                 <div>
                     <label for="origen2">Lugar de origen</label>
