Guardado 2 19 de Diciembre

--- a/folder/tienda.html
+++ b/folder/tienda.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Tienda</title>
     <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
@@ -25,16 +25,10 @@
     </header>
     <main>
         <div>
-            <h1>Coleccion</h1>
-            <p>Aca se encuentran todas tus creaciones y objetos comprados. Revisalos, eliminalos para hacer lugar si queres o si simplemente no te gustan. Es desicion tuya.</p>
+            <h1>Tienda</h1>
+            <p>Adquiere alguno de los personajes e items creados por otros usuarios como vos.</p>
         </div>
         <div id="statik"></div>
-        <section>
-            <ul class="listaColeccion">
-            </ul>
-            <ul class="listaColeccion2">
-            </ul>
-        </section>
     </main>
     <footer>
         <div>
@@ -55,6 +49,6 @@
         </div>
     </footer>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-    <script src="../tuki2.js"></script>
+    <script src="../tuki3.js"></script>
 </body>
 </html>
