--- a/folder/creacion.html
+++ b/folder/creacion.html
@@ -18,7 +18,7 @@
                 <li><a href="../index.html">Inicio</a></li>
                 <li><a href="../folder/creacion.html">Creacion</a></li>
                 <li><a href="../folder/coleccion.html">Coleccion</a></li>
-                <li><a href="">Tienda</a></li>
+                <li><a href="../folder/tienda.html">Tienda</a></li>
                 <li><a href="">Contacto</a></li>
             </ul>
         </nav>
@@ -26,7 +26,9 @@
     <main>
         <div>        
             <h1>Creacion</h1>
-            <p>Utiliza esta seccion para darle uso a tu imaginacion. Crea combinaciones de atributos unicas, para darle un mayor valor a tu creacion.</p></div>
+            <p>Utiliza esta seccion para darle uso a tu imaginacion. Crea combinaciones de atributos unicas, para darle un mayor valor a tu creacion.</p>
+        </div>
+        <div id="statik"></div>
         <article>
             <div>
                 <h2>Creacion de Personajes</h2>
@@ -107,13 +109,20 @@
     </main>
     <footer>
         <div>
-            <p>Nombre pagina</p>
+            <p>Magic Marketplace</p>
+            <img src="https://cdn-icons-png.flaticon.com/512/2575/2575799.png" alt="Foto Icono"> 
         </div>
         <div>
             <p>Redes</p>
+            <ul>
+                <li>Instagram</li>
+                <li>Discord</li>
+                <li>Mail</li>
+            </ul>
         </div>
         <div>
             <p>Ubicacion</p>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3283.4858433444!2d-58.370430984770024!3d-34.61716078045589!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcca98f0058631%3A0x98688c83fc192f2e!2sFacultad%20de%20Ingenier%C3%ADa!5e0!3m2!1ses!2sar!4v1639958594465!5m2!1ses!2sar" width="200" height="200" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
         </div>
     </footer>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
