--- a/index.html
+++ b/index.html
@@ -18,16 +18,17 @@
                 <li><a href="../index.html">Inicio</a></li>
                 <li><a href="folder/creacion.html">Creacion</a></li>
                 <li><a href="folder/coleccion.html">Coleccion</a></li>
-                <li><a href="">Tienda</a></li>
+                <li><a href="folder/tienda.html">Tienda</a></li>
                 <li><a href="">Contacto</a></li>
             </ul>
         </nav>
     </header>
     <main>
         <div>
-            <h1>Tienda virtual</h1>
+            <h1>Magic Marketplace</h1>
             <h4>La coleccion de articulos en la nube a nivel mundial</h4>
         </div>
+        <div id="statik"></div>
         <article>
             <div>
                 <p>Accede a nuestra seccion para crear tus objetos. Los objetos son todos unicos, y puedes moldear desde su origen hasta su propio precio. Pero recuerda, no hagas plagio de objetos.</p>
@@ -53,7 +54,9 @@
         <article>
             <div>
                 <p>La tienda accede a APIs de objetos como los que creas, para que los adquieras y agregues a tu coleccion. Quien sabe, quiza suba su valor.</p>
-                <a href=""></a>
+                <button>
+                    <a href="folder/tienda.html">Tienda</a>
+                </button>
             </div>
             <div>
                 <img src="" alt="">
@@ -71,13 +74,20 @@
     </main>  
     <footer>
         <div>
-            <p>Nombre pagina</p>
+            <p>Magic Marketplace</p>
+            <img src="https://cdn-icons-png.flaticon.com/512/2575/2575799.png" alt="Foto Icono"> 
         </div>
         <div>
             <p>Redes</p>
+            <ul>
+                <li>Instagram</li>
+                <li>Discord</li>
+                <li>Mail</li>
+            </ul>
         </div>
         <div>
             <p>Ubicacion</p>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3283.4858433444!2d-58.370430984770024!3d-34.61716078045589!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcca98f0058631%3A0x98688c83fc192f2e!2sFacultad%20de%20Ingenier%C3%ADa!5e0!3m2!1ses!2sar!4v1639958594465!5m2!1ses!2sar" width="200" height="200" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
         </div>
     </footer>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
