Gurdado 1 21 de Diciembre

--- a/folder/tienda.html
+++ b/folder/tienda.html
@@ -29,6 +29,10 @@
             <p>Adquiere alguno de los personajes e items creados por otros usuarios como vos.</p>
         </div>
         <div id="statik"></div>
+        <section>
+            <div class="tiendaDiv"></div>
+            <div class="tiendaDiv2"></div>
+        </section>
     </main>
     <footer>
         <div>
