Guardado 1 5 de Enero

--- a/folder/creacion.html
+++ b/folder/creacion.html
@@ -60,7 +60,7 @@
                     <input type="number" name="costo" id="costo">
                 </div>
                 <div>
-                    <input type="button" id="terminarPersonaje" class="otroInput">Terminar presonaje
+                    <input type="submit" id="terminarPersonaje" value="Terminar personaje">
                 </div>
             </form>
         </article>
@@ -101,7 +101,7 @@
                     <input type="number" name="costo2" id="costo2">
                 </div>
                 <div>
-                    <input type="button" id="terminarItem" class="otroInput">Terminar Item
+                    <input type="submit" value="Terminar item" id="terminarItem">
                 </div>
             </form>
         </article>
