Guardado 1 9 de Enero

--- a/folder/creacion.html
+++ b/folder/creacion.html
@@ -39,7 +39,8 @@
                     <input type="text" id="nombre" name="nombre" required>
                 </div>
                 <div>
-                    <input type="file" name="archivo" id="archivo">
+                    <label for="archivo">Inserte link de la foto</label>
+                    <input type="text" name="archivo" id="archivo">
                 </div>
                 <div>
                     <label for="origen">Lugar de origen</label>
@@ -75,7 +76,8 @@
                     <input type="text" id="nombre2" name="nombre2" required>
                 </div>
                 <div>
-                    <input type="file" name="archivo2" id="archivo2">
+                    <label for="archivo2">Inserte link de la foto</label>
+                    <input type="text" name="archivo2" id="archivo2">
                 </div>
                 <div>
                     <label for="origen2">Lugar de origen</label>
